# statistics

./: .gitignore  CMakeLists.txt  README.md  discord_commands.cppm  discord_init.cppm  stat.cpp  stat.cppm  stat_helper.cppm  statistics_cuda.cu  statistics_cuda.h
projects/1_stat/: CMakeLists.txt  Output_cpp.txt  README.md  main.cpp
projects/1_stat/python_files/: main.py
projects/2_stat_speedtest/: CMakeLists.txt  column_stats_results.csv  column_stats_results_with_all.csv  main.cpp  test.py
